Update image paths and hotel information

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>Wedding Invitation</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@600&family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
   <!-- Ceremony -->
   <section>
     <p> </p>
-    <img src="images/rings.png" width="15%">
+    <img src="rings.png" width="15%">
     <h2>Ceremony & Reception</h2>
     <p>6:00 pm</p>
     <p> AG Outdoor Venue </p>
@@ -49,7 +50,7 @@
   <section>
    <!-- <img src="images/element.jpg" width="50%"> -->
     <p></p>
-    <img src="images/dress.png" width="15%">
+    <img src="dress.png" width="15%">
     <h2>Dresscode Formal</h2>
     <div class="dresscode">
  	 <!--  <div class="cube" style="background: linear-gradient(135deg,#5a4419 0%,#8a6a2f 30%,#c9a24d 50%,#8a6a2f 70%,#5a4419 100%);"></div> -->
@@ -110,12 +111,56 @@
   </section>
   
  <section class="hotels">
-  <img src="images/hotel.png" width="15%" alt="Hotel icon">
-  <h2>Hotel Recommendation</h2>
+  <img src="hotel.png" width="15%" alt="Hotel icon">
+  <h2>Hotels in the Area</h2>
 
   <div class="hotels-grid">
 
     <!-- Hotel 1 -->
+    <div class="hotel-card">
+      <h3 class="hotel-name">Staybridge Suites Tomball </h3>
+
+      <p class="hotel-line">
+        <strong>Phone:</strong>
+        <a href="tel:+1XXXXXXXXXX">+1 (832) 639 8310</a>
+      </p>
+
+      <p class="hotel-line">
+        <strong>Address:</strong>
+        10011 FM-2920, Tomball, TX 77375
+      </p>
+
+      <p class="hotel-notes">
+         Contact Monique Prior for a special offer with our last name "Szabo" / Shuttle available
+      </p>
+
+      <div class="hotel-links">
+        <a class="hotel-btn" href="https://www.ihg.com/staybridge/hotels/us/en/tomball/tmbsb/hoteldetail?cm_mmc=GoogleMaps-_-SB-_-US-_-TMBSB" target="_blank" rel="noopener">Hotel Website</a>
+        <a class="hotel-btn" href="https://www.google.com/maps/dir/30.14656,-95.5318272/staybridge+suites+tomball/@30.1219295,-95.6020929,12729m/data=!3m2!1e3!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x86472d994401dd25:0xcce162743c2fe959!2m2!1d-95.578409!2d30.093785?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA2OUgBUAM%3D" target="_blank" rel="noopener">Open in Maps</a>
+      </div>
+    </div>
+
+	 <!-- Hotel 2 -->
+    <div class="hotel-card">
+      <h3 class="hotel-name">TownePlace Suites by Marriot</h3>
+
+      <p class="hotel-line">
+        <strong>Phone:</strong>
+        <a href="tel:+1XXXXXXXXXX">+1 (281) 270 0270</a>
+      </p>
+
+      <p class="hotel-line">
+        <strong>Address:</strong><br>
+        9120 FM-2920, Tomball, TX 77375
+      </p>
+
+      <div class="hotel-links">
+        <a class="hotel-btn" href="https://www.marriott.com/brands/towneplace-suites.mi" target="_blank" rel="noopener">Hotel Website</a>
+        <a class="hotel-btn" href="https://www.google.com/maps/dir//TownePlace+Suites+by+Marriott+Houston+Tomball,+9120+Farm+to+Market+2920,+Tomball,+TX+77375/@30.14656,-95.5318272,3182m/data=!3m1!1e3!4m8!4m7!1m0!1m5!1m1!1s0x8647338125d91a27:0x59dfc99b8eb57bcf!2m2!1d-95.5595908!2d30.0785301?hl=en-US&entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA2OUgBUAM%3D" target="_blank" rel="noopener">Open in Maps</a>
+      </div>
+    </div>
+
+	 <!-- Hotel 3 -->
     <div class="hotel-card">
       <h3 class="hotel-name">Hyatt Place Houston NW Vintage Park</h3>
 
@@ -129,17 +174,14 @@
         20330 Tomball Pkwy, Houston, TX 77370
       </p>
 
-      <p class="hotel-notes">
-         Shuttle available / closest to venue
-      </p>
 
       <div class="hotel-links">
         <a class="hotel-btn" href="https://www.hyatt.com/hyatt-place/en-US/houzv-hyatt-place-houston-nw-vintage-park?src=agn_koddi_crp_chico_ppc_22057399811_Conversion_Place_Google_Search_English_HOUZV_Houston_Paid_Brand_CrossDevice_1x1_google_Koddi-TopUp-Evergreen-Brand_e_hyatt%20place%20houston%20nw%20vintage%20park&gad_source=1&gad_campaignid=22057399811&gclid=CjwKCAiAu67KBhAkEiwAY0jAlQY1r0agAaqxaHdAzrJ9XwKp4xjPaNRhWPMmavpUQpyj7cPN8-BRJxoCs-EQAvD_BwE" target="_blank" rel="noopener">Hotel Website</a>
         <a class="hotel-btn" href="https://www.google.com/maps/place/hyatt+place+houston+nw+vintage+park/data=!4m2!3m1!1s0x8640d27b55ec3289:0xf961ccaedbd8eb3e?sa=X&ved=1t:242&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
-
-    <!-- Hotel 2 -->
+	  
+    <!-- Hotel 4 -->
     <div class="hotel-card">
       <h3 class="hotel-name">Tru by Hilton Cypress Houston</h3>
 
@@ -153,33 +195,9 @@
         27204 US-290, Cypress, TX 77433
       </p>
 
-      <p class="hotel-notes">Notes: (optional)</p>
-
       <div class="hotel-links">
         <a class="hotel-btn" href="https://www.hilton.com/en/hotels/iahccru-tru-cypress-houston/?SEO_id=GMB-AMER-RU-IAHCCRU&y_source=1_MTI0Mzc0NjEtNzE1LWxvY2F0aW9uLndlYnNpdGU%3D" target="_blank" rel="noopener">Hotel Website</a>
         <a class="hotel-btn" href="https://www.google.com/maps/dir//tru+by+hilton+cypress+houston/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x8640d53e4f2199ad:0x819dfce08fe2e05f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
-      </div>
-    </div>
-
-    <!-- Hotel 3 -->
-    <div class="hotel-card">
-      <h3 class="hotel-name">Hotel Three Name</h3>
-
-      <p class="hotel-line">
-        <strong>Phone:</strong>
-        <a href="tel:+1XXXXXXXXXX">+1 (XXX) XXX-XXXX</a>
-      </p>
-
-      <p class="hotel-line">
-        <strong>Address:</strong><br>
-        9012 Street Name, Tomball, TX 77377
-      </p>
-
-      <p class="hotel-notes">Notes: (optional)</p>
-
-      <div class="hotel-links">
-        <a class="hotel-btn" href="https://example.com" target="_blank" rel="noopener">Hotel Website</a>
-        <a class="hotel-btn" href="https://www.google.com/maps/search/?api=1&query=9012+Street+Name+Tomball+TX+77377" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
 
@@ -189,7 +207,7 @@
 
   
   <section class="gift">
-    <img src="images/gift.png" width="15%">
+    <img src="gift.png" width="15%">
     <p></p>
     <a class="gift-btn" href="https://www.zola.com/wedding/samanthaandalexandruandrei/registry" target="_blank" rel="noopener">Gift Registry</a>
 
@@ -199,7 +217,7 @@
     <h2>RSVP</h2>
     <p class="small"> Please remember to confirm through your whatsapp/messenger invitation</p>
     <p class="small">For limited reason please only bring whoever is specified in your invitation, we kindly ask you to not bring kids</p>
-    <p class="small"><strong> Please RSVP by January 1st 2026. We look forward to celebrating with you.</strong></p>
+    <p class="small"><strong> Please RSVP before the end of January 2026. We look forward to celebrating with you.</strong></p>
   </div>
 
       
@@ -215,6 +233,5 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
 
