Replace event details with placeholders
Updated placeholder text for event details, including names, dates, and venue information.

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div id="countdown" class="countdown"></div>
     <div class="content">
     </div>
-   	<p class="date">April 30th, 2026 • Houston, TX</p>
+   	<p class="date">Month Day, Year • Place, State</p>
   </div>
 </header>
 
   <section>
-	<h1 class="couple">Alexandru Andrei Szabo</h1>
-    <h1 class="couple">Samantha Badin Arenas</h1>
+	<h1 class="couple"> Bride's Name </h1>
+    <h1 class="couple">Groom's Name </h1>
     <h3></h3>
     <p>With the blessing of our parents</p>
     <h3 class="parents-title">Parents of the Groom</h3>
-     <p>Alexandru Szabo & Dina Szabo</p>
+     <p> Name Last name & Name Last Name </p>
     <h3 class="parents-title">Parents of the Bride</h3>
-     <p>Omar L. Badin Cherit & Patricia Arenas Ramirez</p>
+     <p>Name Last name & Name Last name </p>
 
     <P> </p>
   </section>
@@ -39,9 +39,9 @@
     <img src="rings.png" width="15%">
     <h2>Ceremony & Reception</h2>
     <p>6:00 pm</p>
-    <p> AG Outdoor Venue </p>
-    <p>17439 Self Rd, Tomball, TX 77377</p>
-    <a href="https://www.google.com/maps/search/?api=1&query=AG+Outdoor+Venue+17439+Self+Rd+Tomball+TX+77377"
+    <p> Venue </p>
+    <p>#### Street, City, State Zip Code</p>
+    <a href="https://www.google.com/maps/dir//The+Woodlands+Venue,+8402+Matthews+Ln,+Magnolia,+TX+77354/@30.1671079,-95.7337328,25744m/data=!3m1!1e3!4m17!1m8!3m7!1s0x86472f68fdf6cfcb:0xbfaa6b8ae0046081!2sThe+Woodlands+Venue!8m2!3d30.1671079!4d-95.5895372!15sChJ2ZW51ZSBpbiB3b29kbGFuZHNaFCISdmVudWUgaW4gd29vZGxhbmRzkgELZXZlbnRfdmVudWWaAURDaTlEUVVsUlFVTnZaRU5vZEhsalJqbHZUMjFvV1ZKV1RrOVpXRXBNVlVWMFJsTlViSE5YV0Zwd1UyMWFVVk5GUlJBQuABAPoBBAgAECM!16s%2Fg%2F11wmh922_n!4m7!1m0!1m5!1m1!1s0x86472f68fdf6cfcb:0xbfaa6b8ae0046081!2m2!1d-95.5895372!2d30.1671079?entry=ttu&g_ep=EgoyMDI2MDExMy4wIKXMDSoASAFQAw%3D%3D"
    		target="_blank"
    		rel="noopener">
   		Take me there
@@ -87,23 +87,23 @@
     <p></p>
   	<div class="itinerary-list">
   	   <div class="it-row">
-    	   <div class="it-time">5:30 PM</div>
+    	   <div class="it-time">#:## PM</div>
            <div class="it-event">Gates Open</div>
         </div>
   		<div class="it-row">
-    	   <div class="it-time">6:00 PM</div>
+    	   <div class="it-time">#:## PM</div>
            <div class="it-event">Ceremony</div>
         </div>
   		<div class="it-row">
-    	   <div class="it-time">6:30 PM</div>
+    	   <div class="it-time">#:## PM</div>
            <div class="it-event">Cocktail Hour</div>
         </div>
   		<div class="it-row">
-    	   <div class="it-time">7:30 PM</div>
+    	   <div class="it-time">#:## PM</div>
            <div class="it-event">Reception</div>
         </div>
         <div class="it-row">
-    	   <div class="it-time">11:00 PM</div>
+    	   <div class="it-time">##:## PM</div>
            <div class="it-event">Grand Exit </div>
         </div>
         
@@ -118,91 +118,80 @@
 
     <!-- Hotel 1 -->
     <div class="hotel-card">
-      <h3 class="hotel-name">Staybridge Suites Tomball </h3>
+      <h3 class="hotel-name"> Hotel's Name </h3>
 
       <p class="hotel-line">
         <strong>Phone:</strong>
-        <a href="tel:+1XXXXXXXXXX">+1 (832) 639 8310</a>
+        <a href="tel:+1XXXXXXXXXX">+# (###) ###-###</a>
       </p>
 
       <p class="hotel-line">
         <strong>Address:</strong>
-        10011 FM-2920, Tomball, TX 77375
+        #### Street, City, State Zip Code
       </p>
 
       <p class="hotel-notes">
-         Contact Monique Prior for a special offer with our last name "Szabo" / Shuttle available
+         Description or discount that hotel may offer
       </p>
 
       <div class="hotel-links">
-        <a class="hotel-btn" href="https://www.ihg.com/staybridge/hotels/us/en/tomball/tmbsb/hoteldetail?cm_mmc=GoogleMaps-_-SB-_-US-_-TMBSB" target="_blank" rel="noopener">Hotel Website</a>
-        <a class="hotel-btn" href="https://www.google.com/maps/dir/30.14656,-95.5318272/staybridge+suites+tomball/@30.1219295,-95.6020929,12729m/data=!3m2!1e3!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x86472d994401dd25:0xcce162743c2fe959!2m2!1d-95.578409!2d30.093785?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA2OUgBUAM%3D" target="_blank" rel="noopener">Open in Maps</a>
+        <a class="hotel-btn" href="https://tx.thewoodlandsvenue.com" target="_blank" rel="noopener">Hotel Website</a>
+        <a class="hotel-btn" href="https://www.google.com/maps/dir//marriott+hotel+woodlands/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x864736c07f8d828f:0x7ee1b38de15b4c9f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
 
 	 <!-- Hotel 2 -->
-    <div class="hotel-card">
-      <h3 class="hotel-name">TownePlace Suites by Marriot</h3>
+     <div class="hotel-card">
+      <h3 class="hotel-name"> Hotel's Name </h3>
 
       <p class="hotel-line">
         <strong>Phone:</strong>
-        <a href="tel:+1XXXXXXXXXX">+1 (281) 270 0270</a>
-      </p>
-
-      <p class="hotel-line">
-        <strong>Address:</strong><br>
-        9120 FM-2920, Tomball, TX 77375
-      </p>
-
-      <div class="hotel-links">
-        <a class="hotel-btn" href="https://www.marriott.com/brands/towneplace-suites.mi" target="_blank" rel="noopener">Hotel Website</a>
-        <a class="hotel-btn" href="https://www.google.com/maps/dir//TownePlace+Suites+by+Marriott+Houston+Tomball,+9120+Farm+to+Market+2920,+Tomball,+TX+77375/@30.14656,-95.5318272,3182m/data=!3m1!1e3!4m8!4m7!1m0!1m5!1m1!1s0x8647338125d91a27:0x59dfc99b8eb57bcf!2m2!1d-95.5595908!2d30.0785301?hl=en-US&entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA2OUgBUAM%3D" target="_blank" rel="noopener">Open in Maps</a>
-      </div>
-    </div>
-
-	 <!-- Hotel 3 -->
-    <div class="hotel-card">
-      <h3 class="hotel-name">Hyatt Place Houston NW Vintage Park</h3>
-
-      <p class="hotel-line">
-        <strong>Phone:</strong>
-        <a href="tel:+1XXXXXXXXXX">+1 (832) 930 8090</a>
+        <a href="tel:+1XXXXXXXXXX">+# (###) ###-###</a>
       </p>
 
       <p class="hotel-line">
         <strong>Address:</strong>
-        20330 Tomball Pkwy, Houston, TX 77370
+        #### Street, City, State Zip Code
       </p>
 
+      <p class="hotel-notes">
+         Description or discount that hotel may offer
+      </p>
 
       <div class="hotel-links">
-        <a class="hotel-btn" href="https://www.hyatt.com/hyatt-place/en-US/houzv-hyatt-place-houston-nw-vintage-park?src=agn_koddi_crp_chico_ppc_22057399811_Conversion_Place_Google_Search_English_HOUZV_Houston_Paid_Brand_CrossDevice_1x1_google_Koddi-TopUp-Evergreen-Brand_e_hyatt%20place%20houston%20nw%20vintage%20park&gad_source=1&gad_campaignid=22057399811&gclid=CjwKCAiAu67KBhAkEiwAY0jAlQY1r0agAaqxaHdAzrJ9XwKp4xjPaNRhWPMmavpUQpyj7cPN8-BRJxoCs-EQAvD_BwE" target="_blank" rel="noopener">Hotel Website</a>
-        <a class="hotel-btn" href="https://www.google.com/maps/place/hyatt+place+houston+nw+vintage+park/data=!4m2!3m1!1s0x8640d27b55ec3289:0xf961ccaedbd8eb3e?sa=X&ved=1t:242&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
+        <a class="hotel-btn" href="https://tx.thewoodlandsvenue.com" target="_blank" rel="noopener">Hotel Website</a>
+        <a class="hotel-btn" href="https://www.google.com/maps/dir//marriott+hotel+woodlands/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x864736c07f8d828f:0x7ee1b38de15b4c9f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
-	  
-    <!-- Hotel 4 -->
-    <div class="hotel-card">
-      <h3 class="hotel-name">Tru by Hilton Cypress Houston</h3>
+
+
+	 <!-- Hotel 3 -->
+	      <div class="hotel-card">
+      <h3 class="hotel-name"> Name 1st Hotel </h3>
 
       <p class="hotel-line">
         <strong>Phone:</strong>
-        <a href="tel:+1XXXXXXXXXX">+1 (346) 818 6000</a>
+        <a href="tel:+1XXXXXXXXXX">+# (###) ###-###</a>
       </p>
 
       <p class="hotel-line">
-        <strong>Address:</strong><br>
-        27204 US-290, Cypress, TX 77433
+        <strong>Address:</strong>
+        #### Street, City, State Zip Code
+      </p>
+
+      <p class="hotel-notes">
+         Description or discount that hotel may offer
       </p>
 
       <div class="hotel-links">
-        <a class="hotel-btn" href="https://www.hilton.com/en/hotels/iahccru-tru-cypress-houston/?SEO_id=GMB-AMER-RU-IAHCCRU&y_source=1_MTI0Mzc0NjEtNzE1LWxvY2F0aW9uLndlYnNpdGU%3D" target="_blank" rel="noopener">Hotel Website</a>
-        <a class="hotel-btn" href="https://www.google.com/maps/dir//tru+by+hilton+cypress+houston/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x8640d53e4f2199ad:0x819dfce08fe2e05f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
+        <a class="hotel-btn" href="https://tx.thewoodlandsvenue.com" target="_blank" rel="noopener">Hotel Website</a>
+        <a class="hotel-btn" href="https://www.google.com/maps/dir//marriott+hotel+woodlands/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x864736c07f8d828f:0x7ee1b38de15b4c9f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
 
-   </div>
-  </section>
+	  
+    <!-- Hotel 4 -->
+
 
 
   
@@ -215,9 +204,9 @@
 
   <div class="card rsvp">
     <h2>RSVP</h2>
-    <p class="small"> Please remember to confirm through your whatsapp/messenger invitation</p>
-    <p class="small">For limited reason please only bring whoever is specified in your invitation, we kindly ask you to not bring kids</p>
-    <p class="small"><strong> Please RSVP before the end of January 2026. We look forward to celebrating with you.</strong></p>
+    <p class="small"> Please remember to confirm through --your method of sending the invitation-- </p>
+    <p class="small">For limited reason please only bring whoever is specified in your invitation, we kindly ask you to (not) bring kids</p>
+    <p class="small"><strong> Please RSVP before the end of Month Year. We look forward to celebrating with you.</strong></p>
   </div>
 
       
