--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
         <a class="hotel-btn" href="https://www.google.com/maps/dir//marriott+hotel+woodlands/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x864736c07f8d828f:0x7ee1b38de15b4c9f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
-
 	 <!-- Hotel 2 -->
      <div class="hotel-card">
       <h3 class="hotel-name"> Hotel's Name </h3>
@@ -163,10 +162,8 @@
         <a class="hotel-btn" href="https://www.google.com/maps/dir//marriott+hotel+woodlands/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x864736c07f8d828f:0x7ee1b38de15b4c9f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
-
-
 	 <!-- Hotel 3 -->
-	      <div class="hotel-card">
+	<div class="hotel-card">
       <h3 class="hotel-name"> Name 1st Hotel </h3>
 
       <p class="hotel-line">
@@ -188,10 +185,7 @@
         <a class="hotel-btn" href="https://www.google.com/maps/dir//marriott+hotel+woodlands/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x864736c07f8d828f:0x7ee1b38de15b4c9f?sa=X&ved=1t:155782&ictx=111" target="_blank" rel="noopener">Open in Maps</a>
       </div>
     </div>
-
-	  
-    <!-- Hotel 4 -->
-
+  </div>
  </section> 
 
   
